remove scrollbar style, fix #articles data.

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,19 +1,5 @@
 @import "common";
 
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #eee;
-  border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #aaa;
-  border-radius: 5px;
-}
-
 .container {
   margin: 0 auto;
   width: $container-width;
